--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Group Project!</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://www.gstatic.com/firebasejs/4.1.2/firebase.js"></script><script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="http://www.cleverscript.com/CSL/cleverscriptapi.js"></script>
+    <script type="text/javascript" src="https://www.cleverscript.com/CSL/cleverscriptapi.js"></script>
     <link rel="stylesheet" type="text/css" href="assets/assets.css">
     <link href="https://fonts.googleapis.com/css?family=Questrial" rel="stylesheet">
   </head>
